fix language select button on mobile

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -190,6 +190,23 @@ header {
     flex-direction: column;
     width: 100%; /* Ensure it spans entire width */
   }
+
+  #language-switcher-menu {
+    display: none;
+
+    &.visible {
+      display: block;
+    }
+
+    &.dropdown {
+      position: absolute;
+      background-color: #1a1a1af2;
+
+      li a {
+        padding: 10px 15px;
+      }
+    }
+  }
 }
 
 main {
@@ -238,11 +255,6 @@ h1 {
 .nav-link img, .dropdown img {
   max-width: 22px;
 }
-
-//#language-switcher-menu {
-//  margin-left: -100%;
-//  width: 200%;
-//}
 
 #language-switcher-menu a, a#language-switcher {
   display: flex;
